--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=80
-PUBLIC_VAPID='BMMiN-bIk1mwk8oRFQAsc7VEYWGaw_PQkjS2q18-fEitZx1g78GRUFYxWrixWvcPxV4rH4sTNiCu_nFTbrE71QA'
-PRIVATE_VAPID='GGzgiFh6vY14YcSdxQgyD2CPdxBv9b8dDcEIAy5na4U'
+PUBLIC_VAPID='your_public_vapid_key'
+PRIVATE_VAPID='your_private_vapid_key'
